--- a/views/index.html
+++ b/views/index.html
@@ -90,7 +90,7 @@
                                     <img src="{$value.desphoto}" alt="">
                                     <div class="product-hover">
                                         <a href="/cart/{$value.idproduct}/add" class="add-to-cart-link"><i class="fa fa-shopping-cart"></i> Comprar</a>
-                                        <a href="/products/{$value.desurl}" class="view-details-link"><i class="fa fa-link"></i> Ver Detalhes</a>
+                                        <a href="" class="view-details-link"><i class="fa fa-link"></i> Ver Detalhes</a>
                                     </div>
                                 </div>
                                 
